test/files/syntactic/whileErrors2.out
Parse Error found on while expression: line 7, column 17.
Error Details:
	The expression value is invalid! An ";" is not valid in this context.

Parse Error found on while expression: line 13, column 19.
Error Details:
	The expression value is invalid! An ";" is not valid in this context.

Parse Error found on while expression: line 17, column 20.
Error Details:
	The expression value is invalid! An ";" is not valid in this context.

Parse Error found on while expression: line 19, column 27.
Error Details:
	The expression value is invalid! An ";" is not valid in this context.

Parse Error found on while expression: line 20, column 27.
Error Details:
	The expression is missing an argument after the operator "+"

Parse Error found on while expression: line 27, column 16.
Error Details:
	The expression value is invalid! An "if" is not valid in this context.

Parse Error found on while expression: line 31, column 30.
Error Details:
	The expression is missing an argument after the operator "*"

Parse Error found on while expression: line 32, column 25.
Error Details:
	The expression is missing an argument after the operator "+"

Parse Error found on while expression: line 33, column 21.
Error Details:
	The expression value is invalid! An ";" is not valid in this context.

Parse Error found on while expression: line 35, column 16.
Error Details:
	The expression value is invalid! An "while" is not valid in this context.

Parse Error found on while expression: line 38, column 15.
Error Details:
	The expression value is invalid! An "else" is not valid in this context.

