test/files/syntactic/whileErrors2.jmm
import static io.println(int); 


class test{ 
    int i; 
    public int func(boolean a) {
        while(a+;) {
            
        }
        while(2 + 2 < 8) {
            x = x + 1;
        }
        while(bro+;ken/;) {
            x = x - 1;
        }

        while((err+;o)) {
            a = 2+2;
            while(outroerr;o) {
                while(ola+) {
                    c = c+1;
                }
            }
            c = c+3;
        }

        while((if)) {
            a = 1;
        }
        while(((((((2))))))) a=3;
        while(((((((((((123 */ 2;)))))))))))
        while(1231312 + &&;) {
            while(a+;) a=1;
        }
        while((while)) {
        
        }
        while(else;) i=1;
    }
}